--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
-         
+         <nav class="nav container" style="background-color: aqua;">
+            <a href="#">
+               <i class="ri-rocket-2-line"></i> Space
+            </a>
+            <div class="nav_menu" style="background-color: red;">
+               <ul class="nav_list">
+                  <li class="nav_item">
+                     <a href="#">Home</a>
+                  </li>
+                  <li class="nav_item">
+                     <a href="#">Features</a>
+                  </li>
+                  <li class="nav_item">
+                     <a href="#">Pricing</a>
+                  </li>
+                  <li class="nav_item">
+                     <a href="#">Contact</a>
+                  </li>
+               </ul>
+               <a href="#" class="nav_button">Login</a>
+            </div>
+         </nav>
       </header>
 
       <!--==================== MAIN ====================-->
